--- a/index.html
+++ b/index.html
@@ -38,9 +38,19 @@
      
      <!-- h1.fs-30 -> <h1 class="fs-30">  -->
 
+        <ul>
+            <li>Lorem ipsum dolor sit.</li>
+            <li>Voluptatum impedit suscipit numquam.</li>
+            <li>Quae ducimus fuga illum?</li>
+            <li>Fugiat ut explicabo praesentium!</li>
+            <li>Ea possimus quod distinctio!</li>
+            <li>Ad illum laboriosam et?</li>
+            <li>Molestias iure nostrum non!</li>
+        </ul>
+
 
     <article id="first-article">
-        <h1 class="fs-30 text-red">Lorem, ipsum dolor.</h1> <!-- hem fs-30 hem de text-red class ını kullandık -->
+        <h1 class="color-blue fw-normal">Lorem, ipsum dolor.</h1> <!-- hem fs-30 hem de text-red class ını kullandık -->
         <h2>Lorem, ipsum.</h2>
         <p>Lorem ipsum dolor sit.</p>
         <p>Quibusdam vero doloremque ipsum?</p>
@@ -62,4 +72,5 @@
     </article>
     
 </body>
+
 </html>
